# lab_2

./: CHANGES_DESCRIPTION.md  QUESTIONS_ANSWERS.md  README.md  alembic.ini  check_schema.py  data.db  pyproject.toml  requirements.txt  test_api.py
app/: database.py  dependencies.py  main.py
app/controllers/: order_controller.py  product_controller.py  user_controller.py
app/repositories/: order_repository.py  product_repository.py  user_repository.py
app/schemas/: order.py  product.py  user.py
app/services/: order_service.py  product_service.py  user_service.py
migrations/: env.py
migrations/versions/: 1c445fc3d836_add_description_products_orders.py  29494df1622a_правки_поля_description_в_user.py  2fd469833155_добавлено_поле_stock_quantity_в_.py  c7c3314c286d_create_users_and_addresses_tables.py
src/: models.py  seed.py  seed_products_orders.py
tests/: conftest.py  test_api.py  test_order_repository.py  test_order_service.py  test_product_repository.py  test_user_repository.py
