[project]
name = "lab-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.17.1",
    "sqlalchemy>=2.0.44",
    "litestar>=2.0.0",
    "aiosqlite>=0.19.0",
    "pydantic[email]>=2.0.0",
    "uvicorn>=0.24.0",
]
[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "polyfactory>=2.0.0",
    "pytest-cov>=4.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--verbose --color=yes"
